--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,24 +23,65 @@ jobs:
       - run:
           name: Run UnitTest
           command: ./gradlew testProductsDebug
-      - run:
-          name: Setup emulator
-          command: sdkmanager "system-images;android-25;google_apis;armeabi-v7a" && echo "no" | avdmanager create avd -n test -k "system-images;android-25;google_apis;armeabi-v7a"
-      - run:
-          name: Launch emulator
-          command: export LD_LIBRARY_PATH=${ANDROID_HOME}/emulator/lib64:${ANDROID_HOME}/emulator/lib64/qt/lib && emulator64-arm -avd test -noaudio -no-boot-anim -no-window -accel on
-          background: true
-      - run:
-          name: Wait emulator
-          command: |
-            circle-android wait-for-boot
-            sleep 30
-            adb shell input keyevent 82
-      - run:
-          name: Run EspressoTests
-          command: ./gradlew :app:connectedProductsDebugAndroidTest
+#      - run:
+#          name: Setup emulator
+#          command: sdkmanager "system-images;android-25;google_apis;armeabi-v7a" && echo "no" | avdmanager create avd -n test -k "system-images;android-25;google_apis;armeabi-v7a"
+#      - run:
+#          name: Launch emulator
+#          command: export LD_LIBRARY_PATH=${ANDROID_HOME}/emulator/lib64:${ANDROID_HOME}/emulator/lib64/qt/lib && emulator64-arm -avd test -noaudio -no-boot-anim -no-window -accel on
+#          background: true
+#      - run:
+#          name: Wait emulator
+#          command: |
+#            circle-android wait-for-boot
+#            sleep 30
+#            adb shell input keyevent 82
+#      - run:
+#          name: Run EspressoTests
+#          command: ./gradlew :app:connectedProductsDebugAndroidTest
       - store_artifacts:
           path: app/build/reports
           destination: reports
       - store_test_results:
           path: app/build/test-results
+  ui_test:
+    working_directory: ~/code
+      docker:
+        # Android the primary container
+          - image: circleci/android:api-29
+      environment:
+        JVM_OPTS: -Xmx3200m
+    steps:
+      - checkout
+      - restore_cache:
+      key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
+        - run:
+            command: sudo chmod +x ./gradlew
+        - run:
+            name: Download Dependencies
+            command: ./gradlew androidDependencies
+        - run:
+            name: Setup environment variables
+            command: |
+              echo 'export PATH="$PATH:/usr/local/opt/node@8/bin:${HOME}/.yarn/bin:${HOME}/${CIRCLE_PROJECT_REPONAME}/node_modules/.bin:/usr/local/share/android-sdk/tools/bin"' >> $BASH_ENV
+              echo 'export ANDROID_HOME="/usr/local/share/android-sdk"' >> $BASH_ENV
+              echo 'export ANDROID_SDK_HOME="/usr/local/share/android-sdk"' >> $BASH_ENV
+              echo 'export ANDROID_SDK_ROOT="/usr/local/share/android-sdk"' >> $BASH_ENV
+              echo 'export QEMU_AUDIO_DRV=none' >> $BASH_ENV
+              echo 'export JAVA_HOME=/Library/Java/Home' >> $BASH_ENV
+        - run:
+            name: Install Android sdk
+            command: |
+              HOMEBREW_NO_AUTO_UPDATE=1 brew tap homebrew/cask
+              HOMEBREW_NO_AUTO_UPDATE=1 brew cask install android-sdk
+        - run:
+            name: Install emulator dependencies
+            command: (yes | sdkmanager "platform-tools" "platforms;android-26" "extras;intel;Hardware_Accelerated_Execution_Manager" "build-tools;26.0.0" "system-images;android-26;google_apis;x86" "emulator" --verbose) || true
+        - run: avdmanager create avd -n Pixel_2_API_26 -k "system-images;android-26;google_apis;x86" -g google_apis -d "Nexus 5"
+        - run:
+            name: Run emulator in background
+            command: /usr/local/share/android-sdk/tools/emulator @Pixel_2_API_26 -skin 1080x2066 -memory 2048 -noaudio
+            background: true
+        - run:
+            name: Run Tests
+            command: ./gradlew app:connectedAndroidTest
