--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -72,7 +72,7 @@ jobs:
       - run:
           name: Install Homebrew
           command: |
-            sudo chown -R $USER:admin /usr/local/*
+            sudo chown -R $USER /usr/local/*
             /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install.sh)"
       - run:
           name: Install Android sdk
