--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -77,7 +77,8 @@ jobs:
       - run:
           name: Install Android sdk
           command: |
-            brew install android-sdk
+            brew tap homebrew/cask
+            brew cask install android-sdk
 #            HOMEBREW_NO_AUTO_UPDATE=1 brew tap homebrew/cask
 #            HOMEBREW_NO_AUTO_UPDATE=1 brew cask install android-sdk
       - run:
