--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -70,15 +70,15 @@ jobs:
             echo 'export QEMU_AUDIO_DRV=none' >> $BASH_ENV
             echo 'export JAVA_HOME=/Library/Java/Home' >> $BASH_ENV
             echo 'export PATH=/home/linuxbrew/.linuxbrew/bin:$PATH' >> $BASH_ENV
-      - run:
-          name: Install Homebrew
-          command: |
-            /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install.sh)"
-      - run:
-          name: Install Android sdk
-          command: |
-            HOMEBREW_NO_AUTO_UPDATE=1 brew tap homebrew/cask
-            HOMEBREW_NO_AUTO_UPDATE=1 brew cask install android-sdk
+#      - run:
+#          name: Install Homebrew
+#          command: |
+#            /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install.sh)"
+#      - run:
+#          name: Install Android sdk
+#          command: |
+#            HOMEBREW_NO_AUTO_UPDATE=1 brew tap homebrew/cask
+#            HOMEBREW_NO_AUTO_UPDATE=1 brew install android-sdk
       #            HOMEBREW_NO_AUTO_UPDATE=1 brew tap homebrew/cask
       #            HOMEBREW_NO_AUTO_UPDATE=1 brew cask install android-sdk
       - run:
