--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,7 +48,7 @@ jobs:
     working_directory: ~/code
     docker:
       # Android the primary container
-      - image: circleci/android:api-29
+      - image: circleci/android@0.2.1
     environment:
       JVM_OPTS: -Xmx3200m
     steps:
