--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,10 +1,12 @@
 version: 2.1
+orbs:
+  android: circleci/android@0.2.1
 jobs:
   build:
     working_directory: ~/code
     docker:
       # Android the primary container
-      - image: circleci/android@0.2.1
+      - image: circleci/android:api-29
     environment:
       JVM_OPTS: -Xmx3200m
     steps:
@@ -48,7 +50,7 @@ jobs:
     working_directory: ~/code
     docker:
       # Android the primary container
-      - image: circleci/android@0.2.1
+      - image: circleci/android:api-29
     environment:
       JVM_OPTS: -Xmx3200m
     steps:
