--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,6 +26,9 @@ jobs:
           name: Setup emulator
           command: sdkmanager "system-images;android-26;google_apis;x86"
       - run:
+          name: Create emulator
+          command: avdmanager create avd -n test -k "system-images;android-26;google_apis;x86"
+      - run:
           name: Launch emulator
           command: export LD_LIBRARY_PATH=${ANDROID_HOME}/emulator/lib64:${ANDROID_HOME}/emulator/lib64/qt/lib && emulator -avd test -noaudio -no-boot-anim -no-window -accel auto -verbose
           background: true
