--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,6 +26,9 @@ jobs:
           name: Setup emulator
           command: sdkmanager "system-images;android-26;google_apis;x86"
       - run:
+          name: Accept licenses
+          command: sdkmanager --licenses
+      - run:
           name: Create emulator
           command: avdmanager create avd -n test -k "system-images;android-26;google_apis;x86"
       - run:
