--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,7 +27,7 @@ jobs:
           command: sdkmanager "system-images;android-26;google_apis;x86"
       - run:
           name: Accept licenses
-          command: sdkmanager --licenses
+          command: yes | sdkmanager --licenses
       - run:
           name: Create emulator
           command: avdmanager create avd -n test -k "system-images;android-26;google_apis;x86"
