--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,10 +24,10 @@ jobs:
           key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
       - run:
           name: Setup emulator
-          command: sdkmanager "system-images;android-26;google_apis;x86"
+          command: y | sdkmanager "system-images;android-26;google_apis;x86"
       - run:
           name: Accept licenses
-          command: sdkmanager --licenses
+          command: y | sdkmanager --licenses
       - run:
           name: Create emulator
           command: avdmanager create avd -n test -k "system-images;android-26;google_apis;x86"
