--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,13 +25,11 @@ jobs:
       - run:
           name: Setup emulator
           command: |
-            sdkmanager "system-images;android-26;google_apis;x86" | yes
-            (while sleep 3; do echo "y"; done) | sleep 5
+            (sleep 2; echo "y";) | sdkmanager "system-images;android-26;google_apis;x86"
       - run:
           name: Accept licenses
           command: |
-            (while sleep 3; do echo "y"; done) | sdkmanager --licenses | yes
-            sleep 5
+            (sleep 2; echo "y";) | sdkmanager --licenses
       - run:
           name: Accept licenses2
           command: yes | $ANDROID_HOME/tools/bin/sdkmanager "build-tools;26.0.0"
