--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,8 +36,7 @@ jobs:
       - run:
           name: Create emulator
           command: |
-            avdmanager create avd -n test -k "system-images;android-26;google_apis;x86"
-            echo "no"
+            (sleep 2; echo "no";) | avdmanager create avd -n test -k "system-images;android-26;google_apis;x86"
 #        no custom hardware profile
       - run:
           name: Launch emulator
