--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,7 +49,7 @@ jobs:
       - run:
           name: Launch emulator
           command: |
-            export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$ANDROID_HOME/tools/lib
+            export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$ANDROID_HOME/tools/lib |
 #            export LD_LIBRARY_PATH=${ANDROID_HOME}/emulator/lib64:${ANDROID_HOME}/emulator/lib64/qt/lib &&
 #            emulator64-x86 -avd test -noaudio -no-boot-anim -no-window -accel auto -verbose
             emulator -avd test -noaudio -no-boot-anim -no-window -accel auto -verbose
