--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,12 +46,11 @@ jobs:
           command: |
             (sleep 2; echo "no";) | avdmanager create avd -n test -k "system-images;android-26;google_apis;x86"
 #        no custom hardware profile; export LD_LIBRARY_PATH=${ANDROID_HOME}/emulator/lib64:${ANDROID_HOME}/emulator/lib64/qt/lib &&
-      - run: emulator -avd test -noaudio -no-boot-anim -no-window -accel auto -verbose
+      - run: export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$ANDROID_HOME/tools/lib
       - run:
           name: Launch emulator
           command: |
-            export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$ANDROID_HOME/tools/lib
-#                        export LD_LIBRARY_PATH=${ANDROID_HOME}/emulator/lib64:${ANDROID_HOME}/emulator/lib64/qt/lib &&
+#                        export LD_LIBRARY_PATH=${ANDROID_HOexport LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$ANDROID_HOME/tools/libME}/emulator/lib64:${ANDROID_HOME}/emulator/lib64/qt/lib &&
             #            emulator64-x86 -avd test -noaudio -no-boot-anim -no-window -accel auto -verbose
             emulator -avd test -noaudio -no-boot-anim -no-window -accel auto -verbose
           background: true
