--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,7 +50,7 @@ jobs:
           command: export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$ANDROID_HOME/tools/lib
       - run:
           name: Launch emulator
-          command: |
+          command:
 #                        export LD_LIBRARY_PATH=${ANDROID_HOexport LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$ANDROID_HOME/tools/libME}/emulator/lib64:${ANDROID_HOME}/emulator/lib64/qt/lib &&
             #            emulator64-x86 -avd test -noaudio -no-boot-anim -no-window -accel auto -verbose
             emulator -avd test -noaudio -no-boot-anim -no-window -accel auto -verbose
