--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,7 +50,7 @@ jobs:
           command: export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$ANDROID_HOME/tools/lib
       - run:
           command:
-            sudo apt-get install pulseaudio
+            sudo apt-get install lib32-libpulse
       - run:
           name: Launch emulator
           command:
