--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,10 +47,10 @@ jobs:
             (sleep 2; echo "no";) | avdmanager create avd -n test -k "system-images;android-26;google_apis;x86"
 #        no custom hardware profile; export LD_LIBRARY_PATH=${ANDROID_HOME}/emulator/lib64:${ANDROID_HOME}/emulator/lib64/qt/lib &&
       - run:
-          command: export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$ANDROID_HOME/tools/lib
-      - run:
           command:
-            sudo apt-get install lib32-libpulse
+            sudo apt-get install libpulse0
+      - run:
+          command: export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$ANDROID_HOME/tools/lib
       - run:
           name: Launch emulator
           command:
