--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,11 +46,11 @@ jobs:
           command: |
             (sleep 2; echo "no";) | avdmanager create avd -n test -k "system-images;android-25;google_apis;arm64-v8a"
 #        no custom hardware profile; export LD_LIBRARY_PATH=${ANDROID_HOME}/emulator/lib64:${ANDROID_HOME}/emulator/lib64/qt/lib &&
-      - run:
-          command:
-            sudo apt-get install libpulse0
-      - run:
-          command: export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$ANDROID_HOME/tools/lib
+#      - run:
+#          command:
+#            sudo apt-get install libpulse0
+#      - run:
+#          command: export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$ANDROID_HOME/tools/lib
       - run:
           name: Launch emulator
           command:
