running tests immediately

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -61,13 +61,15 @@ jobs:
           background: true
           parallel: true
       - run:
-          name: Wait emulator
+          name: Wait emulator and run espresso tests
           command: |
             circle-android wait-for-boot
+            sleep 5
             adb shell input keyevent 82
-      - run:
-          name: Run EspressoTests
-          command: ./gradlew :app:connectedProductsDebugAndroidTest
+            ./gradlew :app:connectedProductsDebugAndroidTest
+#      - run:
+#          name: Run EspressoTests
+#          command: ./gradlew :app:connectedProductsDebugAndroidTest
       - store_artifacts:
           path: app/build/reports
           destination: reports
