--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -64,8 +64,8 @@ jobs:
           name: Wait emulator and run espresso tests
           command: |
             circle-android wait-for-boot
-            sleep 5
-            adb shell input keyevent 82
+#            sleep 5
+#            adb shell input keyevent 82
             ./gradlew :app:connectedProductsDebugAndroidTest
 #      - run:
 #          name: Run EspressoTests
