--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -62,14 +62,13 @@ jobs:
           parallel: true
       - run:
           name: Wait emulator and run espresso tests
-          command: |
-            circle-android wait-for-boot
-#            sleep 5
-#            adb shell input keyevent 82
-            ./gradlew :app:connectedProductsDebugAndroidTest
-#      - run:
-#          name: Run EspressoTests
-#          command: ./gradlew :app:connectedProductsDebugAndroidTest
+          command: circle-android wait-for-boot
+      #            ./gradlew :app:connectedProductsDebugAndroidTest
+      #                        sleep 5
+      #                        adb shell input keyevent 82
+      - run:
+          name: Run EspressoTests
+          command: ./gradlew :app:connectedProductsDebugAndroidTest
       - store_artifacts:
           path: app/build/reports
           destination: reports
