--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ jobs:
     working_directory: ~/code
     docker:
       # Android the primary container
-      - image: circleci/android:api-25
+      - image: circleci/android:api-23
     environment:
       JVM_OPTS: -Xmx3200m
     steps:
@@ -34,7 +34,7 @@ jobs:
       - run:
           name: Setup emulator
           command: |
-            (sleep 2; echo "y";) | sdkmanager "system-images;android-25;google_apis;arm64-v8a"
+            (sleep 2; echo "y";) | sdkmanager "system-images;android-23;google_apis;armeabi-v7a"
       #      - run:
       #          name: Accept licenses
       #          command: |
@@ -45,7 +45,7 @@ jobs:
       - run:
           name: Create emulator
           command: |
-            (sleep 2; echo "no";) | avdmanager create avd -n test -k "system-images;android-25;google_apis;arm64-v8a"
+            (sleep 2; echo "no";) | avdmanager create avd -n test -k "system-images;android-23;google_apis;armeabi-v7a"
       #        no custom hardware profile; export LD_LIBRARY_PATH=${ANDROID_HOME}/emulator/lib64:${ANDROID_HOME}/emulator/lib64/qt/lib &&
       #      - run:
       #          command:
@@ -57,7 +57,7 @@ jobs:
           command:
             #                        export LD_LIBRARY_PATH=${ANDROID_HOexport LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$ANDROID_HOME/tools/libME}/emulator/lib64:${ANDROID_HOME}/emulator/lib64/qt/lib &&
             #            emulator64-x86 -avd test -noaudio -no-boot-anim -no-window -accel auto -verbose
-            emulator -avd test -no-audio -no-boot-anim -no-window -no-accel -memory 2048 -verbose &
+            emulator -avd test -no-boot-anim -no-window -no-accel -memory 2048 -verbose &
           background: true
           parallel: true
       - run:
