wait for emulator

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,7 +30,8 @@ jobs:
       - run:
           name: Launch emulator
           command: |
-            export SHELL=/bin/bash && emulator -avd test -noaudio -no-boot-anim -no-window -gpu off -verbose -qemu &
+            export SHELL=/bin/bash
+            emulator -avd test -noaudio -no-boot-anim -no-window -gpu off -verbose -qemu &
             adb wait-for-device
             export TERM=${TERM:-dumb}
       - run:
